--- a/sample.ipynb
+++ b/sample.ipynb
@@ -6,90 +6,73 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-12T16:11:35.954739Z",
-     "start_time": "2025-03-12T16:11:23.549181Z"
+     "end_time": "2025-03-23T05:05:26.011962Z",
+     "start_time": "2025-03-23T05:05:24.447472Z"
     }
    },
    "source": [
-    "import torch\n",
-    "from transformers import Qwen2_5_VLForConditionalGeneration, AutoTokenizer, AutoProcessor\n",
+    "import os\n",
+    "from datasets import load_dataset\n",
     "\n",
-    "from qwen_vl_utils import process_vision_info\n",
+    "os.environ['HF_DATASETS_CACHE'] = \"/root/lanyun-tmp/hf/cache\"\n",
     "\n",
-    "model_name = \"/root/lanyun-tmp/hf/Qwen2.5-VL-7B-Instruct-AWQ\"\n",
-    "\n",
-    "# We recommend enabling flash_attention_2 for better acceleration and memory saving, especially in multi-image and video scenarios.\n",
-    "model = Qwen2_5_VLForConditionalGeneration.from_pretrained(\n",
-    "    model_name,\n",
-    "    torch_dtype=torch.float16,\n",
-    "    # attn_implementation=\"flash_attention_2\",\n",
-    "    device_map=\"cuda\",\n",
-    ")\n",
-    "\n",
-    "# default processer\n",
-    "# processor = AutoProcessor.from_pretrained(model_name)\n",
-    "\n",
-    "# The default range for the number of visual tokens per image in the model is 4-16384.\n",
-    "# You can set min_pixels and max_pixels according to your needs, such as a token range of 256-1280, to balance performance and cost.\n",
-    "min_pixels = 256 * 28 * 28\n",
-    "max_pixels = 1280 * 28 * 28\n",
-    "processor = AutoProcessor.from_pretrained(model_name, min_pixels=min_pixels, max_pixels=max_pixels)\n",
-    "\n",
-    "messages = [\n",
-    "    {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": [\n",
-    "            {\n",
-    "                \"type\": \"image\",\n",
-    "                \"image\": \"https://qianwen-res.oss-cn-beijing.aliyuncs.com/Qwen-VL/assets/demo.jpeg\",\n",
-    "            },\n",
-    "            {\"type\": \"text\", \"text\": \"图片中有一只狗吗？\"},\n",
-    "        ],\n",
-    "    }\n",
-    "]\n",
-    "\n",
-    "# Preparation for inference\n",
-    "text = processor.apply_chat_template(\n",
-    "    messages, tokenize=False, add_generation_prompt=True\n",
-    ")\n",
-    "\n",
-    "image_inputs, video_inputs = process_vision_info(messages)\n",
-    "inputs = processor(\n",
-    "    text=[text],\n",
-    "    images=image_inputs,\n",
-    "    videos=video_inputs,\n",
-    "    padding=True,\n",
-    "    return_tensors=\"pt\",\n",
-    ")\n",
-    "inputs = inputs.to(\"cuda\")\n",
-    "\n",
-    "# Inference: Generation of the output\n",
-    "generated_ids = model.generate(**inputs, max_new_tokens=128)\n",
-    "generated_ids_trimmed = [\n",
-    "    out_ids[len(in_ids):] for in_ids, out_ids in zip(inputs.input_ids, generated_ids)\n",
-    "]\n",
-    "output_text = processor.batch_decode(\n",
-    "    generated_ids_trimmed, skip_special_tokens=True, clean_up_tokenization_spaces=False\n",
-    ")\n",
-    "print(output_text)\n"
+    "dataset = load_dataset(\n",
+    "    path=\"/root/lanyun-tmp/hf/wikipedia-zh-mnbvc\",\n",
+    "    cache_dir=\"/root/lanyun-tmp/hf/cache\",\n",
+    "    num_proc=36,\n",
+    ")"
    ],
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:07<00:00,  3.73s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['是的，图片中有一只狗。它坐在沙滩上，穿着彩色的背带，正在和一个人互动。']\n"
+      "/root/miniconda/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-23T05:19:12.236100Z",
+     "start_time": "2025-03-23T05:19:12.223750Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 打印基本信息\n",
+    "\"\".join([line[\"内容\"] for line in dataset['train'][10025][\"段落\"]])"
+   ],
+   "id": "6b0934017f920a2a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'【蝠鲼属】蝠鲼（学名：Mobula）又称魔鬼鱼，体长可达8米，重达1吨以上，身体扁平，有强大的胸鳍，类似翅膀，在海洋中巡游，胸鳍前有两个薄、窄、似耳朵的突起，可以向口中收集食物，牙齿细小，主要以浮游生物和小鱼为食，经常在珊瑚礁附近巡游觅食，性情温和。在分类上，蝠鲼科（Mobulidae）仍在研究，有时它会独立成科，但大多数和鲼科的鱼合并在一起。蝠鲼的外形类似鬼蝠𫚉(Manta)，在2017年之前被分为两个不同的属，前者为蝠鲼属（Mobula）后者为前口蝠鲼属（Manta），2017年后经过ＤＮＡ检测确认两生物同为蝠鲼属（Mobula）。蝠鲼俗作膨鱼，膨鱼鳃就是蝠鲼的鳃。坊间盛传“膨鱼鳃是一种万灵药”，然而根据参考资料并非如此。==种==目前辨认出九个种：*侏儒蝠鲼（Mobula eregoodootenkee）*下口蝠鲼（Mobula hypostoma）*日本蝠鲼（Mobula japanica）*库氏蝠鲼（Mobula kuhlii）*无刺蝠鲼（Mobula mobular）*芒基蝠鲼（Mobula munkiana）*罗切氏蝠鲼（Mobula rochebrunei）*褐背蝠鲼（Mobula tarapacana）*印度蝠鲼（Mobula thurstoni）==图集====参考文献====外部连结==* The Flying Mobulas of the Sea of Cortez'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-23T05:04:48.616939Z",
+     "start_time": "2025-03-23T05:04:48.611775Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "3f30144d3139d3d3",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
